--- a/ESP_Version_3_3.ioc
+++ b/ESP_Version_3_3.ioc
@@ -64,16 +64,17 @@ Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin40=PC10
 Mcu.Pin41=PC11
 Mcu.Pin42=PC12
-Mcu.Pin43=PB6
-Mcu.Pin44=PB7
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=PB4
+Mcu.Pin44=PB6
+Mcu.Pin45=PB7
+Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=47
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -182,6 +183,10 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=yukariValfOut
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=testLed
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
