--- a/ESP_Version_3_3.ioc
+++ b/ESP_Version_3_3.ioc
@@ -327,4 +327,4 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
-isbadioc=true
+isbadioc=false
